samples/_failures_safe/1761699794_a0cdcb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7cce96a.c: In function ‘main’:
./samples/SAFE/__tmp_c7cce96a.c:143:5: error: expected declaration or statement at end of input
  143 |     }
      |     ^
